external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_macro_bang.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/invalid_macro_bang.move:3:25
  │
3 │     fun bar() { foo<u64>!(42) }
  │                         ^
  │                         │
  │                         Unexpected '!'
  │                         Expected ';'

